tests/struct_composition_bad_cycle.stderr
tests/struct_composition_bad_cycle.hop:7:2: error: HOP2014: embedded struct cycle detected
