tests/struct_composition_bad_cycle.hop
// Verifies struct composition bad cycle.
struct A {
	B
}

struct B {
	A
}
